--- a/index.html
+++ b/index.html
@@ -5,7 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
+    <!-- fonts -->
+    <link rel="stylesheet" href="https://use.typekit.net/afp7nnf.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Getting Started with Artificial Intelligence</title>
   </head>
-  <body></body>
+  <body>
+    <section class="title-space">
+      <div class="title">
+        <p class="intro-text">
+          Start reaping the actual benefits of AI. <br />
+          Not tomorrow, but today.
+        </p>
+        <h1>
+          Getting Started <br />
+          with Artificial <br />Intelligence
+        </h1>
+      </div>
+    </section>
+
+    <section class="abstract">
+      <div class="abstract-image">
+        <img src="assets/Foto_s/Studio/_DSF8683.jpg" />
+      </div>
+      <div class="abstract-text">
+        <h1>Abstract</h1>
+        <h2>
+          Have you been wondering about how you can apply AI in your
+          organisation? With our AI Design Sprint, we can help you discover how
+          machine learning will change and automate your business processes, and
+          how your employees could work with it, in just two weeks.
+        </h2>
+        <button class="lifely-button">Schedule a free AI consultation</button>
+        <button class="lifely-button">Discover Lifely’s AI services</button>
+      </div>
+    </section>
+  </body>
+
+  <script src="scripts/script.js" defer></script>
 </html>
