--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="abstract">
       <div class="abstract-image">
-        <img src="../assets/Foto_s/Studio/_DSF8683.jpg" />
+        <img src="assets/Foto_s/Studio/_DSF8683.jpg" />
       </div>
       <div class="abstract-text">
         <h1>Abstract</h1>
