--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,6 +16,7 @@
     <title>Getting Started with Artificial Intelligence</title>
   </head>
   <body>
+    <!-- navbar toevoegen -->
     <section class="title-space">
       <div class="title">
         <p class="intro-text">
@@ -31,7 +32,7 @@
 
     <section class="abstract">
       <div class="abstract-image">
-        <img src="assets/Foto_s/Studio/_DSF8683.jpg" alt="" />
+        <img src="assets/Foto_s/Studio/DSF8683.jpg" alt="" />
       </div>
       <div class="abstract-text">
         <h1>Abstract</h1>
