--- a/index.html
+++ b/index.html
@@ -18,33 +18,65 @@
   </head>
   <body>
     <!-- navbar toevoegen -->
+    <header>
+      <img class="logo-img" src="assets/Logo/Dark/Logo_dark.svg" />
+      <button class="menu-button">
+        <span class="span-text-menu">Menu</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          viewBox="0 0 16 16"
+          fill="none"
+          aria-hidden="true"
+        >
+          <path stroke="#3C3B34" d="M2 3.5h12m-12 4h12m-12 4h12"></path>
+        </svg>
+      </button>
+    </header>
     <section class="title-space">
       <div class="title">
-        <p class="intro-text">
+        <h3 class="intro-text">
           Start reaping the actual benefits of AI. <br />
           Not tomorrow, but today.
-        </p>
+        </h3>
+
         <h1>
           Getting Started <br />
           with Artificial <br />Intelligence
         </h1>
       </div>
-    </section>
-
-    <section class="abstract">
-      <div class="abstract-image">
-        <img src="assets/Foto_s/Studio/DSF8683.jpg" alt="" />
+      <div class="abstract">
+        <div class="abstract-image">
+          <img src="assets/Foto_s/Studio/DSF8683.jpg" alt="studio lifely" />
+        </div>
+        <div class="abstract-text">
+          <h1>Abstract</h1>
+          <h2>
+            Have you been wondering about how you can apply AI in your
+            organisation? With our AI Design Sprint, we can help you discover
+            how machine learning will change and automate your business
+            processes, and how your employees could work with it, in just two
+            weeks.
+          </h2>
+          <a class="lifely-button">Schedule a free AI consultation</a>
+          <!-- <a class="lifely-button">Discover Lifely’s AI services</a> -->
+        </div>
       </div>
-      <div class="abstract-text">
-        <h1>Abstract</h1>
-        <h2>
-          Have you been wondering about how you can apply AI in your
-          organisation? With our AI Design Sprint, we can help you discover how
-          machine learning will change and automate your business processes, and
-          how your employees could work with it, in just two weeks.
-        </h2>
-        <button class="lifely-button">Schedule a free AI consultation</button>
-        <button class="lifely-button">Discover Lifely’s AI services</button>
+    </section>
+    <section>
+      <div class="dictionary-quote">
+        <p class="quote">AI Design Sprint</p>
+        <p>/eɪ-aɪ dɪˈzaɪn sprɪnt/</p>
+
+        <p>
+          An AI Design Sprint is a time-constrained process executed by an
+          interdisciplinary team. The process focuses on proving the practical
+          applicability of artificial intelligence models within an
+          organisation. The result is a prototype that automates parts of a
+          business process, including a reflection on how a business will be
+          able to work with AI in the future.
+        </p>
       </div>
     </section>
   </body>
