aanpassing in css custom properties
betere properties voor de fonts

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     </header>
     <section class="title-space">
       <div class="title">
-        <h3 class="intro-text">
-          Start reaping the actual benefits of AI. <br />
-          Not tomorrow, but today.
-        </h3>
+        <p class="intro-oneliner">Start reaping the actual benefits of AI.</p>
+        <p class="intro-oneliner">Not tomorrow, but today.</p>
 
         <h1>
-          Getting Started <br />
-          with Artificial <br />Intelligence
+          <span class="main-title">Getting Started</span>
+          <span class="main-title">with</span>
+          <span class="main-title">Artificial</span>
+          <span class="main-title">Intelligence</span>
         </h1>
       </div>
       <div class="abstract">
@@ -51,14 +51,17 @@
           <img src="assets/Foto_s/Studio/DSF8683.jpg" alt="studio lifely" />
         </div>
         <div class="abstract-text">
-          <h1>Abstract</h1>
-          <h2>
+          <h1>
+            <span class="main-title">Abstract</span>
+          </h1>
+
+          <p>
             Have you been wondering about how you can apply AI in your
             organisation? With our AI Design Sprint, we can help you discover
             how machine learning will change and automate your business
             processes, and how your employees could work with it, in just two
             weeks.
-          </h2>
+          </p>
           <a class="lifely-button">Schedule a free AI consultation</a>
           <!-- <a class="lifely-button">Discover Lifely’s AI services</a> -->
         </div>
