--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <!-- favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="assets/Logo/Favicon/Favicon_homerun.png"
+    />
+
     <title>Getting Started with Artificial Intelligence</title>
     <script src="scripts/script.js" defer></script>
   </head>
