--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
     </header>
     <section class="title-space">
       <div class="title">
-        <p class="intro-oneliner">Start reaping the actual benefits of AI.</p>
-        <p class="intro-oneliner">Not tomorrow, but today.</p>
+        <div class="intro">
+          <p class="intro-oneliner">Start reaping the actual benefits of AI.</p>
+          <p class="intro-oneliner">Not tomorrow, but today.</p>
+        </div>
 
         <h1>
           <span class="main-title">Getting Started</span>
