--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
     <!-- fonts -->
-    <link rel="stylesheet" href="https://use.typekit.net/afp7nnf.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/zwr7fiz.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
