--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
     <section class="title-space">
       <div class="title">
         <div class="intro">
-          <p class="intro-oneliner">Start reaping the actual benefits of AI.</p>
-          <p class="intro-oneliner">Not tomorrow, but today.</p>
+          <p class="intro-oneliner">
+            Getting started with Artificial Intelligence
+          </p>
         </div>
 
         <h1>
-          <span class="main-title">Getting Started</span>
-          <span class="main-title">with</span>
-          <span class="main-title">Artificial</span>
-          <span class="main-title">Intelligence</span>
+          <span class="main-title">Start reaping the</span>
+          <span class="main-title">actual</span>
+          <span class="main-title">benefits of AI</span>
+          <span class="main-title">Not tomorrow, but today.</span>
         </h1>
       </div>
       <div class="abstract">
@@ -78,8 +79,8 @@
     </section>
     <section>
       <div class="dictionary-quote">
-        <p class="quote">AI Design Sprint</p>
-        <p>/eɪ-aɪ dɪˈzaɪn sprɪnt/</p>
+        <dfn>AI Design Sprint</dfn>
+        <p class="subtext">/eɪ-aɪ dɪˈzaɪn sprɪnt/</p>
 
         <p>
           An AI Design Sprint is a time-constrained process executed by an
