--- a/index.html
+++ b/index.html
@@ -72,8 +72,29 @@
             processes, and how your employees could work with it, in just two
             weeks.
           </p>
-          <a class="lifely-button">Schedule a free AI consultation</a>
-          <!-- <a class="lifely-button">Discover Lifely’s AI services</a> -->
+          <div class="call-to-action">
+            <a class="lifely-primary-button">Schedule a free AI consultation</a>
+            <a class="lifely-secondary-button">
+              Discover Lifely’s AI services
+              <span class="arrow-right"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="20"
+                  height="8"
+                  viewBox="0 0 20 8"
+                  fill="none"
+                  class="arrow"
+                  aria-hidden="true"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M17.416 3.397l-2.774-2.7.716-.697 3.584 3.487.358.349-.358.349-3.584 3.487-.716-.697 2.648-2.578H0v-1h17.416z"
+                    fill="#FF6B6B"
+                  ></path></svg
+              ></span>
+            </a>
+          </div>
         </div>
       </div>
     </section>
