--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <script src="scripts/script.js" defer></script>
   </head>
   <body>
-    <!-- navbar toevoegen -->
     <header>
       <img class="logo-img" src="assets/Logo/Dark/Logo_dark.svg" />
       <button class="menu-button">
@@ -41,7 +40,8 @@
         </svg>
       </button>
     </header>
-    <section class="title-space">
+
+    <section class="main-content">
       <div class="title">
         <div class="intro">
           <p class="intro-oneliner">
@@ -111,6 +111,23 @@
           business process, including a reflection on how a business will be
           able to work with AI in the future.
         </p>
+      </div>
+    </section>
+    <section>
+      <div class="ai-steps">
+        <div class="ai-steps-title">
+          <p class="intro-oneliner">
+            What are the steps of the AI Design Sprint?
+          </p>
+        </div>
+        <div class="ai-steps-cards">
+          <p>
+            We bring together your team to get your current process on paper.
+            When we know the goals and output of your process we can effectively
+            validate if we have successfully supported or replaced parts with AI
+            solutions.
+          </p>
+        </div>
       </div>
     </section>
   </body>
