ai sprint steps added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
     <title>Getting Started with Artificial Intelligence</title>
     <script src="scripts/script.js" defer></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   </head>
   <body>
     <header>
@@ -48,17 +51,18 @@
             Getting started with Artificial Intelligence
           </p>
         </div>
-
-        <h1>
-          <span class="main-title">Start reaping the</span>
-          <span class="main-title">actual</span>
-          <span class="main-title">benefits of AI</span>
-          <span class="main-title">Not tomorrow, but today.</span>
-        </h1>
+        <div class="main-title-box">
+          <h1>
+            <span class="main-title">Start reaping the</span>
+            <span class="main-title">actual</span>
+            <span class="main-title">benefits of AI</span>
+            <span class="main-title">Not tomorrow, but today.</span>
+          </h1>
+        </div>
       </div>
       <div class="abstract">
         <div class="abstract-image">
-          <img src="assets/Foto_s/Studio/DSF8683.jpg" alt="studio lifely" />
+          <img src="assets/Foto_s/Studio/DSF8508.jpg" alt="studio lifely" />
         </div>
         <div class="abstract-text">
           <h1>
@@ -72,6 +76,7 @@
             processes, and how your employees could work with it, in just two
             weeks.
           </p>
+          </div>
           <div class="call-to-action">
             <a class="lifely-primary-button">Schedule a free AI consultation</a>
             <a class="lifely-secondary-button">
@@ -113,22 +118,87 @@
         </p>
       </div>
     </section>
-    <section>
-      <div class="ai-steps">
+
+
+    <section class="ai-sprint-steps">
+      <div class="ai-steps-main">
         <div class="ai-steps-title">
-          <p class="intro-oneliner">
+          <h2 class="ai-steps-main-title">
             What are the steps of the AI Design Sprint?
-          </p>
+          </h2>
         </div>
-        <div class="ai-steps-cards">
-          <p>
-            We bring together your team to get your current process on paper.
-            When we know the goals and output of your process we can effectively
-            validate if we have successfully supported or replaced parts with AI
-            solutions.
-          </p>
+
+
+        <div class="ai-steps-content">
+          <ol class="ai-steps-list">
+            <li class="step">
+              <span class="step-count">Step 1</span>
+              <h3 class="step-title">We research your process</h3>
+              <div class="step-text">
+                <h4 class="step-subtitle">Context is key.</h4>
+                <p>
+                  We bring together your team to get your current process on paper. 
+                  When we know the goals and output of your process we can 
+                  effectively validate if we have successfully supported or 
+                  replaced parts with AI solutions.
+                </p>
+              </div>
+            </li>
+            <li class="step">
+              <span class="step-count">Step 2</span>
+              <h3 class="step-title">We give you the knowledge to become future-proof</h3>
+              <div class="step-text">
+                <h4 class="step-subtitle">Setting the stage.</h4>
+                <p>We invite experts to educate your team on what AI is, what its 
+                  use cases are, how it will develop in the future, and how it will
+                   affect your industry and business.
+                </p>
+              </div>
+            </li>
+            <li class="step">
+              <span class="step-count">Step 3</span>
+              <h3 class="step-title">We zoom in on what's important</h3>
+              <div class="step-text">
+                <h4 class="step-subtitle">Getting to the core.</h4>
+                <p>
+                 To make sure we have a solid prototype, we have to create focus. 
+                 With your team, we decide which parts of your process will have 
+                 the biggest impact on efficiency and on cost savings.
+                </p>
+              </div>
+            </li>
+            <li class="step">
+              <span class="step-count">Step 4</span>
+              <h3 class="step-title">We create a prototype</h3>
+              <div class="step-text">
+                <h4 class="step-subtitle">Augmenting your process.</h4>
+                <p>
+                  Good preparation results in good execution. With the insights
+                  of all the previous steps, we leverage AI models and create
+                  a prototype that automates or enhances parts of your business
+                  processes.
+                </p>
+              </div>
+            </li>
+            <li class="step">
+              <span class="step-count">Step 5</span>
+              <h3 class="step-title"> And we make sure it works</h3>
+              <div class="step-text">
+                <h4 class="step-subtitle">Solve for good.</h4>
+                <p>
+                  We bring back your team to test the prototype and see if it’s 
+                  helpful and practical in real-world scenarios. In the end, 
+                  you’ll receive the actual prototype (be it an API or script), 
+                  and advice on whether or not your organisation is ready to 
+                  embrace AI.
+                </p>
+              </div>
+            </li>
+          </ol>
         </div>
       </div>
     </section>
+
+
   </body>
 </html>
