--- a/index.html
+++ b/index.html
@@ -198,7 +198,46 @@
         </div>
       </div>
     </section>
+    
+    <footer>
+      <div class="footer-content">
 
+        <div class="footer-main-content">
+          <img class="footer-logo" src="assets/Logo/Inverted/Logo_inverted.svg" />
+            <ul class="footer-links">
+                <li class="footer-item">Work</li>
+                <li class="footer-item">Culture</li>
+                <li class="footer-item">People</li>
+                <li class="footer-item">Knowledge</li>
+                <li class="footer-item">Jobs</li>
+                <li class="footer-item">Contact</li>
+            </ul>          
+        </div>
+
+        <div class="footer-titles">
+           <span class="footer-text-title">Services</span>
+            <ul class="footer-links">
+                <li class="footer-item">Agile Product Teams</li>
+                <li class="footer-item">Artificial Intelligence</li>
+                <li class="footer-item">Strategic Development</li>
+            </ul>          
+        </div>
+
+        <div class="footer-titles">
+           <span class="footer-text-title">Solutions</span>
+          <ul class="footer-links">
+                <li class="footer-item">Software as a Service</li>
+                <li class="footer-item">Cross-Platform Apps</li>
+                <li class="footer-item">Software Rebuild</li>
+                <li class="footer-item">Common Ground Software</li>
+                <li class="footer-item">Getting started with AI</li>
+                <li class="footer-item">Robotic Process Automation</li>
+                <li class="footer-item">Google Design Sprint</li>
+                <li class="footer-item">AI in production</li>
+            </ul>
+        </div>
+    </div>
+    </footer>
 
   </body>
 </html>
