--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <!-- favicon -->
     <link
       rel="icon"
@@ -103,6 +105,7 @@
         </div>
       </div>
     </section>
+
     <section>
       <div class="dictionary-quote">
         <dfn>AI Design Sprint</dfn>
@@ -198,7 +201,43 @@
         </div>
       </div>
     </section>
+
+  <section class="contact">
+      <section class="contact-title">
+          <h1>
+            <span class="main-title">Not sure yet? Let's discuss.</span>
+          </h1>
+          <p>Let's explore your goals, and figure out if we can help you achieve them.</p>
+          <p>Call us  <b>020 846 19 05</b> </p>
+          <p>Mail our expert <b>martijn@lifely.nl</b></p>
+      </section>
+      
+      <section class="wrapper">
+      <section class="months">
+        <p class="current-date"></p>
+        <div class="icons">
+          <span id="prev" class="material-symbols-rounded">chevron_left</span>
+          <span id="next" class="material-symbols-rounded">chevron_right</span>
+        </div>
+      </section>
+      <div class="calendar">
+        <ul class="weeks">
+          <li>Sun</li>
+          <li>Mon</li>
+          <li>Tue</li>
+          <li>Wed</li>
+          <li>Thu</li>
+          <li>Fri</li>
+          <li>Sat</li>
+        </ul>
+        <ul class="days"></ul>
+      </div>
+    </div>
+    </section>
+  </section>
+
     
+
     <footer>
       <div class="footer-content">
 
