--- a/index.html
+++ b/index.html
@@ -201,8 +201,24 @@
         </div>
       </div>
     </section>
+  
+  <section class="cases">
+      <div class="cases-title">
+        <div class="intro">
+          <p class="intro-oneliner">
+            We've done this before
+          </p>
+           <h1>
+            <span class="main-title">Cases</span>
+          </h1>
+      </div>
+      <div class="case-1">
+
+      </div>
+  </section>
 
   <section class="contact">
+      <img src="assets/Foto_s/Studio/DSF8924.jpg" />
       <section class="contact-title">
           <h1>
             <span class="main-title">Not sure yet? Let's discuss.</span>
