--- a/index.html
+++ b/index.html
@@ -61,16 +61,50 @@
             <span class="main-title">Not tomorrow, but today.</span>
           </h1>
         </div>
+        <div class="abstract-image">
+          <img src="assets/Foto_s/Studio/DSF8508-v1.jpg" alt="studio lifely" />
+        </div>
+        <div class="abstract-image-v2">
+          <img src="assets/Foto_s/Studio/DSF8508-v2.jpg" alt="studio lifely" />
+        </div>
+        <div class="abstract-main-text">
+                 <p>
+            Have you been wondering about how you can apply AI in your
+            organisation? With our AI Design Sprint, we can help you discover
+            how machine learning will change and automate your business
+            processes, and how your employees could work with it, in just two
+            weeks.
+          </p>
+
+          <a class="lifely-primary-button">Schedule a free AI consultation</a>
+            <a class="lifely-secondary-button">
+              Discover Lifely’s AI services
+              <span class="arrow-right"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="20"
+                  height="8"
+                  viewBox="0 0 20 8"
+                  fill="none"
+                  class="arrow"
+                  aria-hidden="true"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M17.416 3.397l-2.774-2.7.716-.697 3.584 3.487.358.349-.358.349-3.584 3.487-.716-.697 2.648-2.578H0v-1h17.416z"
+                    fill="#FF6B6B"
+                  ></path></svg
+              ></span>
+            </a>
+        </div>
       </div>
       <div class="abstract">
-        <div class="abstract-image">
-          <img src="assets/Foto_s/Studio/DSF8508.jpg" alt="studio lifely" />
-        </div>
+      
         <div class="abstract-text">
           <h1>
             <span class="main-title">Abstract</span>
           </h1>
-
           <p>
             Have you been wondering about how you can apply AI in your
             organisation? With our AI Design Sprint, we can help you discover
