--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
           <img src="assets/Foto_s/Studio/DSF8508-v2.jpg" alt="studio lifely" />
         </div>
         <div class="abstract-main-text">
-                 <p>
+           <h2>
+            <span class="main-title">Abstract</span>
+          </h2>
+          <p>
             Have you been wondering about how you can apply AI in your
             organisation? With our AI Design Sprint, we can help you discover
             how machine learning will change and automate your business
