--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="dictionary">
       <div class="dictionary-quote">
         <dfn>AI Design Sprint</dfn>
         <p class="subtext">/eɪ-aɪ dɪˈzaɪn sprɪnt/</p>
@@ -163,11 +163,10 @@
     <section class="ai-sprint-steps">
       <div class="ai-steps-main">
         <div class="ai-steps-title">
-          <h2 class="ai-steps-main-title">
+          <p class="intro-oneliner">
             What are the steps of the AI Design Sprint?
-          </h2>
+          </p>
         </div>
-
 
         <div class="ai-steps-content">
           <ol class="ai-steps-list">
@@ -238,7 +237,101 @@
         </div>
       </div>
     </section>
-  
+
+    <section class="ai-sprint-steps-web">
+
+      <div class="ai-sprint-steps-main-title">
+        <div class="ai-steps-title">
+          <p class="intro-oneliner">
+            What are the steps of the AI Design Sprint?
+          </p>
+      </div>
+      </div>
+
+      <div class="ai-sprint-steps-counter-1">
+           <span class="step-count">Step 1</span>
+      </div>
+      <div class="ai-steps-title-1">
+        <h3 class="step-title">We research your process</h3>
+      </div>
+      <div class="step-text-1">
+          <h4 class="step-subtitle">Context is key.</h4>
+            <p class="step-explain">
+              We bring together your team to get your current process on paper. 
+              When we know the goals and output of your process we can 
+              effectively validate if we have successfully supported or 
+              replaced parts with AI solutions.
+            </p>
+      </div>
+
+      <div class="ai-sprint-steps-counter-2">
+        <span class="step-count">Step 2</span>
+      </div>
+      <div class="ai-steps-title-2">
+        <h3 class="step-title">We give you the knowledge to become future-proof</h3>
+      </div>
+      <div class="step-text-2">
+          <h4 class="step-subtitle">Setting the stage.</h4>
+            <p class="step-explain">
+              We invite experts to educate your team on what AI is, what its 
+              use cases are, how it will develop in the future, and how it will
+              affect your industry and business.
+            </p>
+      </div>
+
+      <div class="ai-sprint-steps-counter-3">
+        <span class="step-count">Step 3</span>
+      </div>
+      <div class="ai-steps-title-3">
+        <h3 class="step-title">We zoom in on what's important</h3>
+      </div>
+      <div class="step-text-3">
+          <h4 class="step-subtitle">Getting to the core.</h4>
+            <p class="step-explain">
+                To make sure we have a solid prototype, we have to create focus. 
+                 With your team, we decide which parts of your process will have 
+                 the biggest impact on efficiency and on cost savings.
+            </p>
+      </div>
+
+      <div class="ai-sprint-steps-counter-4">
+        <span class="step-count">Step 4</span>
+      </div>
+      <div class="ai-steps-title-4">
+        <h3 class="step-title">We create a prototype</h3>
+      </div>
+      <div class="step-text-4">
+          <h4 class="step-subtitle">Augmenting your process.</h4>
+            <p class="step-explain">
+                Good preparation results in good execution. With the 
+                insights of all the previous steps, we leverage AI models 
+                and create a prototype that automates or enhances parts 
+                of your business processes.
+            </p>
+      </div>
+
+      <div class="ai-sprint-steps-counter-5">
+        <span class="step-count">Step 5</span>
+      </div>
+      <div class="ai-steps-title-5">
+        <h3 class="step-title">And we make sure it works</h3>
+      </div>
+      <div class="step-text-5">
+          <h4 class="step-subtitle">Solve for good.</h4>
+            <p class="step-explain">
+                We bring back your team to test the prototype and see if it’s 
+                helpful and practical in real-world scenarios. In the end, 
+                you’ll receive the actual prototype (be it an API or script), 
+                and advice on whether or not your organisation is ready to 
+                embrace AI.
+
+            </p>
+      </div>
+
+      
+    </section>
+    
+<!--   
   <section class="cases">
       <div class="cases-title">
         <div class="intro">
@@ -252,7 +345,7 @@
       <div class="case-1">
 
       </div>
-  </section>
+  </section> -->
 
   <section class="contact">
       <img src="assets/Foto_s/Studio/DSF8924.jpg" />
