link to contact

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             weeks.
           </p>
 
-          <a class="lifely-primary-button">Schedule a free AI consultation</a>
+          <a class="lifely-primary-button" href="#contact-section">Schedule a free AI consultation</a>
             <a class="lifely-secondary-button">
               Discover Lifely’s AI services
               <span class="arrow-right"
@@ -347,7 +347,7 @@
       </div>
   </section> -->
 
-  <section class="contact">
+  <section class="contact" id="contact-section">
     <div class="contact-image">
       <img src="assets/Foto_s/Studio/DSF8924-v2.jpg" />
     </div>
