--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             </ul>          
         </div>
 
-        <div class="footer-titles">
+        <div class="footer-titles-1">
            <span class="footer-text-title">Services</span>
             <ul class="footer-links">
                 <li class="footer-item">Agile Product Teams</li>
@@ -409,7 +409,7 @@
             </ul>          
         </div>
 
-        <div class="footer-titles">
+        <div class="footer-titles-2">
            <span class="footer-text-title">Solutions</span>
           <ul class="footer-links">
                 <li class="footer-item">Software as a Service</li>
