--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <header>
-      <img class="logo-img" src="assets/Logo/Dark/Logo_dark.svg" />
+      <img class="logo-img" src="assets/Logo/Dark/Logo_dark.svg" alt="lifely logo" />
       <button class="menu-button">
         <span class="span-text-menu">Menu</span>
         <svg
@@ -345,7 +345,7 @@
 
   <section class="contact" id="contact-section">
     <div class="contact-image">
-      <img src="assets/Foto_s/Studio/DSF8924-v2.jpg" />
+      <img src="assets/Foto_s/Studio/DSF8924-v2.jpg" alt="contact-us"/>
     </div>
 
       <div class="contact-title">
@@ -385,7 +385,7 @@
       <div class="footer-content">
 
         <div class="footer-main-content">
-          <img class="footer-logo" src="assets/Logo/Inverted/Logo_inverted.svg" />
+          <img class="footer-logo" src="assets/Logo/Inverted/Logo_inverted.svg" alt="lifely-logo"/>
             <ul class="footer-links">
                 <li class="footer-item">Work</li>
                 <li class="footer-item">Culture</li>
